...
import androidx.compose.ui.Modifier
import androidx.compose.ui.res.stringResource
import dev.bwaim.loteria.compose.extensions.testTag
import dev.bwaim.loteria.home.components.HomeAppBar
import dev.bwaim.loteria.localization.R.string

public const val START_BUTTON: String = "StartButton"

@Composable
public fun HomeRoute(
    modifier: Modifier = Modifier,
    navigateToSettings: () -> Unit,
    navigateToDraw: () -> Unit,
...
